--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <nav id="navbar">
 
     <div id="logo">
-        <h1>Zero<b style="color:#29721b;">Hunger</b></h1>
+        <h1>Zero<b style="color:#6c721b;">Hunger</b></h1>
     </div>
 
     <ul>
