--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="home">
       <h1 class="h-primary">
         Welcome to<b style="color: rgb(1, 1, 1)"> Zero</b>
-        <b style="color: #29721b; font-size: 4.4rem">Hunger</b>
+        <b style="color:#6c721b; font-size: 4.4rem">Hunger</b>
       </h1>
       <p>
         “If you cannot feed a hundred people, then feed just one”<br />
@@ -47,7 +47,7 @@
         <div class="content">
           <h4>ABOUT US</h4>
           <p>
-            <b>Zero</b><b style="color: #29721b">Hunger</b> is the United
+            <b>Zero</b><b style="color:#6c721b">Hunger</b> is the United
             Nations' <i>second Sustainable Development Goal</i>, aiming to
             eradicate hunger, ensure food security, improve nutrition, and
             promote sustainable agriculture by <b>2030</b>. It focuses on
