--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </nav>
     <section id="home">
       <h1 class="h-primary">
-        Welcome to<b style="color: rgb(1, 1, 1)"> Zero</b>
-        <b style="color: #033864; font-size: 4.4rem">Hunger</b>
+        <b style="color: rgb(1, 1, 1)">Welcome to</b>
+        <b style="color:white; font-size: 4.4rem"><b style="color:black;">Zero</b>Hunger</b>
       </h1>
       <p>
         “If you cannot feed a hundred people, then feed just one”<br />
