--- a/index.html
+++ b/index.html
@@ -142,6 +142,151 @@
             </div>
         </div>
     </section>
-    
-  </body>
+    <section class="layout">
+      <h2 style="color: #033864; text-align:center">
+          HELP/FAQs
+      </h2>
+      <div class="accordion">
+          <div class="accordion__question">
+              <p>What is No Food For Change?<i class="fa fa-plus" style="font-size:24px;margin-left: 76%"></i></p>
+
+          </div>
+          <div class="accordion__answer">
+              <p>No Food Waste is a food recovery and food waste management network that helps connect individuals and
+                  businesses with excess food to people in need. We approach the issue of hunger
+                  with a sharing-economy model: the donation of excess food enables a vital, yet often wasted,
+                  resource to be used to its full capacity.</p>
+          </div>
+      </div>
+
+      <div class="accordion">
+          <div class="accordion__question">
+              <p>How FFC is different from others?<i class="fa fa-plus" style="font-size:24px;margin-left: 73%"></i>
+              </p>
+          </div>
+
+          <div class="accordion__answer">
+              <p>
+                  Our use of technology makes FoodFor Change unique as we are able to provide our services on-demand
+                  and trustable.
+              </p>
+          </div>
+      </div>
+      <div class="accordion">
+          <div class="accordion__question">
+              <p>How will my donation be used?<i class="fa fa-plus" style="font-size:24px;;margin-left: 75%"></i>
+              </p>
+
+          </div>
+          <div class="accordion__answer">
+              <p> Your donation will be used to support our mission and the various programs and initiatives that we
+                  have in place.
+                  Your donation will help us to continue providing assistance and support to those in need. You can
+                  find more
+                  information about our programs and initiatives on our website. If you have any specific questions or
+                  concerns,
+                  please feel free to contact us</p>
+          </div>
+      </div>
+      <div class="accordion">
+          <div class="accordion__question">
+              <p>What should I do if my food donation is near or past its expiration date?<i class="fa fa-plus"
+                      style="font-size:24px;margin-left: 46%"></i></p>
+
+          </div>
+          <div class="accordion__answer">
+              <p> We appreciate your willingness to donate, but to ensure the safety of our clients we can't accept
+                  food
+                  that is near or past its expiration date. We recommend checking expiration dates before making a
+                  donation
+                  or contact us for further guidance</p>
+          </div>
+      </div>
+  </section>
+  <script src="main.js"></script>
+
+  </p>
+
+
+  <p id="contacts">
+  <footer>
+      <div class="foot-panel1">
+          CONTACT US
+      </div>
+
+
+      <div class="foot-panel2">
+          <ul>
+              <p>GET TO KNOW</p>
+              <a>About Us</a>
+              <a>Our Goals</a>
+              <a>Our Process</a>
+              <a>Our Works</a>
+              <a>Our Team</a>
+
+          </ul>
+
+          <ul>
+              <p>RESOURCES</p>
+              <a>Blogs</a>
+              <a>Gallery</a>
+              <a>News Letters</a>
+              <a>Testimonials </a>
+              <a>Publications</a>
+              <a>In The News</a>
+          </ul>
+
+          <ul>
+              <p>FOOD FOR CHANGE</p>
+              <a>Impact</a>
+              <a>Corporate Partners</a>
+              <a>Join Us</a>
+              <a>Donate</a>
+          </ul>
+
+
+          <div class="row-flex">
+              <div class="flex-column-form">
+                  <h3>
+                      TO CONTACT
+                  </h3>
+                  <form class="media-centered">
+
+
+                      <div>
+                          <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp"
+                              placeholder="Enter name">
+                      </div>
+                      <div>
+                          <input type="number" class="form-control" id="exampleInputphoneNumber1"
+                              placeholder="Enter phone number">
+                      </div>
+                      <div>
+                          <input type="email" class="form-control" id="exampleInputemail1" aria-describedby="nameHelp"
+                              placeholder="Enter your Email Address">
+                      </div>
+                      <button type="submit" class="btn-primary">
+                          Submit
+                      </button>
+
+                  </form>
+              </div>
+
+  </footer>
+
+  <div class="foot-panel4">
+      <div class="pages">
+          <a>Condition Of Use</a>
+          <a>Privacy Notice</a>
+          <a>Your Ads Privacy Choices</a>
+      </div>
+      <div class="copyright">
+          © 2023, ZeroHunger.com, Inc. or its affiliates
+      </div>
+      </p>
+
+      <script src="main.js"></script>
+
+</body>
+
 </html>
