--- a/index.html
+++ b/index.html
@@ -148,27 +148,23 @@
       </h2>
       <div class="accordion">
           <div class="accordion__question">
-              <p>What is No Food For Change?<i class="fa fa-plus" style="font-size:24px;margin-left: 76%"></i></p>
+              <p>What is Zero Hunger?<i class="fa fa-plus" style="font-size:24px;margin-left: 76%"></i></p>
 
           </div>
           <div class="accordion__answer">
-              <p>No Food Waste is a food recovery and food waste management network that helps connect individuals and
-                  businesses with excess food to people in need. We approach the issue of hunger
-                  with a sharing-economy model: the donation of excess food enables a vital, yet often wasted,
-                  resource to be used to its full capacity.</p>
+              <p>Zero Hunger is the second goal of the United Nations' Sustainable Development Goals (SDGs). It aims to end hunger, achieve food security, improve nutrition, and promote sustainable agriculture by 2030. The goal focuses on ensuring that all people, particularly the poor and vulnerable, have access to sufficient, safe, and nutritious food all year round.</p>
           </div>
       </div>
 
       <div class="accordion">
           <div class="accordion__question">
-              <p>How FFC is different from others?<i class="fa fa-plus" style="font-size:24px;margin-left: 73%"></i>
+              <p>How zero hunger is different from other SDG's ?<i class="fa fa-plus" style="font-size:24px;margin-left: 73%"></i>
               </p>
           </div>
 
           <div class="accordion__answer">
               <p>
-                  Our use of technology makes FoodFor Change unique as we are able to provide our services on-demand
-                  and trustable.
+                Zero Hunger is distinct from other Sustainable Development Goals (SDGs) in its specific focus on eradicating hunger, achieving food security, improving nutrition, and promoting sustainable agriculture.It targets increasing agricultural productivity and incomes of small-scale food producers, unlike other SDGs that focus on areas like poverty, education, and clean water. While interconnected, each SDG has distinct primary objectives and specific indicators to measure progress.
               </p>
           </div>
       </div>
