--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
       </h2>
       <div class="accordion">
           <div class="accordion__question">
-              <p>What is No Food For Change?<i class="fa fa-plus" style="font-size:24px;margin-left: 76%"></i></p>
+              <p>What is Zero hunger?<i class="fa fa-plus" style="font-size:24px;margin-left: 76%"></i></p>
 
           </div>
           <div class="accordion__answer">
-              <p>No Food Waste is a food recovery and food waste management network that helps connect individuals and
+              <p>Zero Hunger is a food recovery and food waste management network that helps connect individuals and
                   businesses with excess food to people in need. We approach the issue of hunger
                   with a sharing-economy model: the donation of excess food enables a vital, yet often wasted,
                   resource to be used to its full capacity.</p>
@@ -165,7 +165,7 @@
 
       <div class="accordion">
           <div class="accordion__question">
-              <p>How FFC is different from others?<i class="fa fa-plus" style="font-size:24px;margin-left: 73%"></i>
+              <p>How ZH is different from others?<i class="fa fa-plus" style="font-size:24px;margin-left: 73%"></i>
               </p>
           </div>
 
