--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <div class="accordion">
           <div class="accordion__question">
-              <p>How ZH is different from others?<i class="fa fa-plus" style="font-size:24px;margin-left: 73%"></i>
+              <p>How ZH is different from others?<i class="fa fa-plus" style="font-size:24px;float: right;"></i>
               </p>
           </div>
 
@@ -178,7 +178,7 @@
       </div>
       <div class="accordion">
           <div class="accordion__question">
-              <p>How will my donation be used?<i class="fa fa-plus" style="font-size:24px;;margin-left: 75%"></i>
+              <p>How will my donation be used?<i class="fa fa-plus" style="font-size:24px;;float: right;"></i>
               </p>
 
           </div>
