--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
               </p>
 
           </div>
+
           <div class="accordion__answer">
               <p> Your donation will be used to support our mission and the various programs and initiatives that we
                   have in place.
@@ -191,7 +192,7 @@
                   concerns,
                   please feel free to contact us</p>
           </div>
-          
+      </div>
           <div class="accordion">
             <div class="accordion__question">
               <p>What should I do if my food donation is near or past its expiration date?</p>
