--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </ul>
 
             <ul>
-                <p>FOOD FOR CHANGE</p>
+                <p>ZERO HUNGER</p>
                 <a>Impact</a>
                 <a>Corporate Partners</a>
                 <a>Join Us</a>
