--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p id="about"></p>
     <section class="tool">
       <div class="main">
-        <div class="content">
+        <div class="content" >
           <h4>ABOUT US</h4>
           <p>
             <b>Zero</b><b style="color: #033864">Hunger</b> is the United
@@ -70,7 +70,7 @@
         </div>
         <div class="content">
           <h3>OUR MISSION AND VISION</h3>
-          <p>
+          <p id="mission">
             To develop an innovative web platform that combats hunger by
             connecting communities, providing resources, and promoting
             sustainable agriculture. We envision a world where everyone has
