--- a/index.html
+++ b/index.html
@@ -275,9 +275,16 @@
             <a>Privacy Notice</a>
             <a>Your Ads Privacy Choices</a>
         </div>
+
         <div class="copyright">
             © 2023, ZeroHunger.com, Inc. or its affiliates
         </div>
+      
+    <div class="chatbot-button-container"> 
+      <button class="chatbot-button">
+         <i class="fas fa-comment-alt"></i>
+      </button>
+    </div>
         </p>
 
         <script src="main.js"></script>
