--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
           <div class="accordion__answer">
               <p>
-                  Our use of technology makes FoodFor Change unique as we are able to provide our services on-demand
+                  Our use of technology makes Zero Hunger unique as we are able to provide our services on-demand
                   and trustable.
               </p>
           </div>
