--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </p>
 <p id="connect">
   <section class="services-container">
-      <h1 class="h-primary1 center">Connect With Us</h1>
+      <h1 class="h-primary1 center" ;>Connect With Us</h1>
       <div id="services">
           <div class="box">
 
