--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <section id="home">
       <h1 class="h-primary">
-        Welcome to<b style="color: rgb(1, 1, 1)"> </b>
+        <b style="color: rgb(1, 1, 1)"> Welcome to  </b>
         <b style="color: #033864; font-size: 4.4rem"><b style="color: rgb(1, 1, 1)">Zero</b>Hunger</b>
       </h1>
       <p>
@@ -99,21 +99,19 @@
 </p>
 <p id="connect">
   <section class="services-container">
-      <h1 class="h-primary1 center" ;>Connect With Us</h1>
+      <h1 class="h-primary1 center">Connect With Us</h1>
       <div id="services">
           <div class="box">
 
               <h2 class="h-secondary center">Become a DONOR</h2>
-              <p class="center">Food brings happiness which gets doubled when shared.Register as a Food Donor under
-                  FFC to share your surplus food to needy and hungry people on time.</p>
+              <p class="center">Join us in the fight against hunger. Donate now to make a difference and help achieve zero hunger worldwide.</p>
               <button class="btn1"><a href="fooddonate.html" style="text-decoration: none;">Donate
                       Here</a></button>
           </div>
           <div class="box">
               <h2 class="h-secondary center">Become a VOLUNTEER</h2>
 
-              <p class="center">The best way to find yourself is to lose yourself in the service of others.Ready to
-                  serve the needy!Then, register here as a volunteer to join hands with us.</p>
+              <p class="center">Find yourself by serving others. Ready to help those in need? Register here to volunteer and join us.</p>
               <button class="btn1"><a href="volunteerform.html" style="text-decoration: none;">Register Here</a> </button>
 
           </div>
