--- a/ngo.html
+++ b/ngo.html
@@ -10,7 +10,7 @@
 
     <h2 id="1">1. <a href="https://www.cry.org/" target="_blank">CRY : Child Rights And You </a></h2>
 
-    <p>CRY Focus On Child Education , Child Health & Nutrition , Stop Child Labour , Support Girl Child Education , Stop Child Marriage ,
+    <p>CRY Focus On Basic Rights Of Children Eg : Child Education , Child Health & Nutrition , Stop Child Labour , Support Girl Child Education , Stop Child Marriage ,
      Prevent Child Trafficking & Many more .</p>
 
          <div><img src="CRY.jpeg"
