--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
         </div>
       
     <div class="chatbot-button-container"> 
-      <button class="chatbot-button">
-         <i class="fas fa-comment-alt"></i>
+      <button class="chatbot-button"><a href="Chatbot.html"><i class="fas fa-comment-alt"></i></a></button>
       </button>
     </div>
         </p>
