--- a/index.html
+++ b/index.html
@@ -230,59 +230,62 @@
       CONTACT US
     </div>
 
+    <div class="panels">
+      <div class="foot-panel2">
+        <ul>
+          <p>GET TO KNOW</p>
+          <a>About Us</a>
+          <a>Our Goals</a>
+          <a>Our Process</a>
+          <a>Our Works</a>
+          <a>Our Team</a>
 
-    <div class="foot-panel2">
-      <ul>
-        <p>GET TO KNOW</p>
-        <a>About Us</a>
-        <a>Our Goals</a>
-        <a>Our Process</a>
-        <a>Our Works</a>
-        <a>Our Team</a>
+        </ul>
 
-      </ul>
+        <ul>
+          <p>RESOURCES</p>
+          <a>Blogs</a>
+          <a>Gallery</a>
+          <a>News Letters</a>
+          <a>Testimonials </a>
+          <a>Publications</a>
+          <a>In The News</a>
+        </ul>
 
-      <ul>
-        <p>RESOURCES</p>
-        <a>Blogs</a>
-        <a>Gallery</a>
-        <a>News Letters</a>
-        <a>Testimonials </a>
-        <a>Publications</a>
-        <a>In The News</a>
-      </ul>
-
-      <ul>
-        <p>ZERO HUNGER</p>
-        <a>Impact</a>
-        <a>Corporate Partners</a>
-        <a>Join Us</a>
-        <a>Donate</a>
-      </ul>
+        <ul>
+          <p>ZERO HUNGER</p>
+          <a>Impact</a>
+          <a>Corporate Partners</a>
+          <a>Join Us</a>
+          <a>Donate</a>
+        </ul>
 
 
-      <div class="row-flex">
-        <div class="flex-column-form">
-          <h3>
-            TO CONTACT
-          </h3>
-          <form class="media-centered">
-            <div class="form-group">
-              <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp"
-                placeholder="Enter name">
-            </div>
-            <div class="form-group">
-              <input type="tel" class="form-control" id="exampleInputphoneNumber1" placeholder="Enter phone number">
-            </div>
-            <div class="form-group">
-              <input type="email" class="form-control" id="exampleInputemail1" aria-describedby="emailHelp"
-                placeholder="Enter your Email Address">
-            </div>
-            <button type="submit" class="btn btn-primary">
-              Submit
-            </button>
-          </form>
+        <div class="row-flex">
+          <div class="flex-column-form">
+            <h3>
+              TO CONTACT
+            </h3>
+            <form class="media-centered">
+              <div class="form-group">
+                <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp"
+                  placeholder="Enter name">
+              </div>
+              <div class="form-group">
+                <input type="tel" class="form-control" id="exampleInputphoneNumber1" placeholder="Enter phone number">
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" id="exampleInputemail1" aria-describedby="emailHelp"
+                  placeholder="Enter your Email Address">
+              </div>
+              <button type="submit" class="btn btn-primary">
+                Submit
+              </button>
+            </form>
+          </div>
+
         </div>
+
 
   </footer>
 
