footer font size

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <div class="row-flex">
           <div class="flex-column-form">
-            <h3>
+            <h3 class="heads">
               TO CONTACT
             </h3>
             <form class="media-centered">
