--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <b style="color: rgb(1, 1, 1)"> Welcome to </b>
       <b style="color: #033864; font-size: 4.4rem"><b style="color: rgb(1, 1, 1)">Zero</b>Hunger</b>
     </h1>
-    <p>
+    <p class="para">
       “If you cannot feed a hundred people, then feed just one”<br />
       – Mother Teresa
     </p>
