--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </h2>
     <div class="accordion">
       <div class="accordion__question">
-        <p>What is Zero hunger?<i class="fa fa-plus" style="font-size:24px;margin-left: 76%"></i></p>
+        <p>What is Zero hunger?<i class="fa fa-plus" style="font-size:24px;float: right;"></i></p>
 
       </div>
       <div class="accordion__answer">
